# ai-quant-researcher

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
ai_quant_lab/: __init__.py  config.py  run.py
ai_quant_lab/agents/: __init__.py  base.py  code.py  critic.py  hypothesis.py  memory.py  offline.py  risk.py
ai_quant_lab/backtest/: __init__.py  costs.py  engine.py  event_driven.py  utils.py
ai_quant_lab/features/: __init__.py  labels.py  leakage_detector.py  library.py  pipeline.py
ai_quant_lab/orchestrator/: __init__.py  gates.py  loop.py  sandbox.py
ai_quant_lab/production/: __init__.py  audit_log.py  kill_switch.py  monitoring.py  paper_trading.py
ai_quant_lab/validation/: __init__.py  deflated_sharpe.py  diagnostics.py  purged_cv.py  walk_forward.py
docs/: AGENTS.md  ARCHITECTURE.md  CONTRIBUTING.md  VALIDATION.md
examples/: 01_backtest_basics.py  02_feature_pipeline.py  03_leakage_demo.py  04_walk_forward.py  05_deflated_sharpe_demo.py  06_full_research_loop.py  07_cross_sectional_momentum.py  08_paper_trading_sim.py  10_experiment_grid.py
figures/: generate_figures.py
tests/: conftest.py  test_agents.py  test_backtest.py  test_deflated_sharpe.py  test_features.py  test_gates.py  test_upgrades.py  test_validation.py
