[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-quant-lab"
version = "0.1.0"
description = "AI-powered quant research engine. Claude generates strategies; the system validates and kills the bad ones."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "ai-quant-lab contributors"}]
keywords = ["quant", "trading", "research", "claude", "anthropic", "backtest", "deflated-sharpe", "purged-cv"]
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Scientific/Engineering",
]

dependencies = [
    "numpy>=1.26",
    "pandas>=2.1",
    "scipy>=1.11",
    "anthropic>=0.40",
    "pydantic>=2.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "matplotlib>=3.8",
    "ruff>=0.5",
]
figures = ["matplotlib>=3.8"]

[project.scripts]
ai-quant-lab = "ai_quant_lab.run:main"

[project.urls]
Homepage = "https://github.com/yourname/ai-quant-lab"
Issues = "https://github.com/yourname/ai-quant-lab/issues"

[tool.setuptools.packages.find]
include = ["ai_quant_lab*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
line-length = 100
target-version = "py311"
